--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "jupyter.jupyterServerType": "remote",
-    "python.pythonPath": "C:\\Python38\\python.exe"
+    "python.pythonPath": "/root/anaconda3/envs/working/bin/python"
 }
